@@ -1,5 +1,5 @@
 .\"
-.\" $Id: amavisd-milter.8,v 1.16 2007/09/02 12:22:17 reho Exp $
+.\" $Id: amavisd-milter.8,v 1.17 2007/09/23 17:29:07 reho Exp $
 .\"
 .Dd Januar 23, 2006
 .Dt amavisd-milter 8
@@ -15,6 +15,7 @@
 .Op Fl m Ar max-conns
 .Op Fl M Ar max-wait
 .Op Fl p Ar pidfile
+.Op Fl q Ar backlog
 .Op Fl s Ar socket
 .Op Fl t Ar timeout
 .Op Fl S Ar socket
@@ -105,6 +106,11 @@ has default value 1 hour,
 We suggest to use less than 10 minutes. 
 .It Fl p Ar pidfile
 Use this pid file (default /var/amavis/amavisd-milter.pid).
+.It Fl q Ar backlog
+Sets the incoming socket backlog used by
+.Xr listen 2 Ns
+\&.
+If it is not set or set to zero, the operating system default is used.
 .It Fl s Ar socket
 Communication socket between
 .Sy sendmail
